--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -1,8 +1,14 @@
+block variables
+    - var SiteName = "Sample Site"
+    - var PageName = "Home"
+    - var PageID = 'home';
+
+
 doctype html
-html
+html(lang='ru')
     head
         meta(charset="utf-8")
-        title my page
+        title PageName + ' / ' + SiteName
         meta(content="" name="author")
         meta(content="" name="description")
         meta(content="" name="keywords")
@@ -12,7 +18,36 @@ html
         //- favicon block start
         //- favicon block end
         link(rel='stylesheet' href='/assets/css/app.css')
+        script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
+        script(src='./js/common.js')
 
 
     body
-        h1 My Page
+        //include includes/head.pug
+        section.first-section
+            div.container
+                nav.navigation
+                main#pug-id
+                    h1 My Page
+                    p Тестовый текст
+                    p Тестовый текст 2
+                    p
+                        a(href='#' title='test') Тестовая ссылка
+                    div.box
+                    div.message
+                    div.success
+                    div.error
+                    div.warning
+                aside(role="complementary")
+                    div.message
+                    div.success
+                    div.error
+                    div.warning
+                aricle(role="main")
+                    div.message
+                    div.success
+                    div.error
+                    div.warning
+        footer
+            div.container
+                p Copyright
