--- a/source/template/includes/navigation.pug
+++ b/source/template/includes/navigation.pug
@@ -1,14 +1,13 @@
 header
-    h1.logo MyCompany
     i.material-icons#nav menu
-ul#dropdown
-    li
-        a(href="#") Link 1
-    li
-        a(href="#") Link 2
-    li
-        a(href="#") Link 2
-    li
-        a(href="#") Link 3
-    li
-        a(href="#") Link 4
+        ul#dropdown
+            li
+                a(href="#") #{PageID}
+            li
+                a(href="#") Link 2
+            li
+                a(href="#") Link 2
+            li
+                a(href="#") Link 3
+            li
+                a(href="#") Link 4
