--- a/source/template/index.pug
+++ b/source/template/index.pug
@@ -1,36 +1,21 @@
-block variables
-    - var SiteName = "Sample Site"
-    - var PageName = "Home"
-    - var PageID = 'home';
-
-
+- var SiteName = 'Sample Site'
+- var PageName = 'Home'
+- var PageID = 'home'
 doctype html
 html(lang='ru')
-    head
-        meta(charset="utf-8")
-        title PageName + ' / ' + SiteName
-        meta(content="" name="author")
-        meta(content="" name="description")
-        meta(content="" name="keywords")
-        meta(content="width=device-width, initial-scale=1" name="viewport")
-        meta(content="ie=edge" http-equiv="x-ua-compatible")
-
-        //- favicon block start
-        //- favicon block end
-        link(rel='stylesheet' href='/assets/css/app.css')
-        script(src='https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js')
-        script(src='./js/common.js')
-
-
+    include includes/head.pug
     body
-        //include includes/head.pug
+        include includes/navigation.pug
         section.first-section
             div.container
                 nav.navigation
                 main#pug-id
                     h1 My Page
-                    p Тестовый текст
-                    p Тестовый текст 2
+                    p Проодолжить разработку и установить npm install --save-dev gulp-uglify
+                    p Сделать задачу минификации js
+                    p https://getinstance.info/articles/tools/introduction-to-gulp/
+                    p https://www.npmjs.com/package/gulp-uglify
+                    p Подключить common.js
                     p
                         a(href='#' title='test') Тестовая ссылка
                     div.box
